--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "prefix_tree_map"
 description = "A Rust implementation of generic prefix tree (trie) map with wildcard capture support"
-categories = ["data-structures"]
+categories = ["data-structures", "no-std"]
 keywords = ["trie", "prefix", "tree", "map", "collection"]
 version = "0.1.0"
 authors = ["EAimTY <ea.imty@gmail.com>"]
@@ -11,3 +11,7 @@ license = "GPL-3.0-or-later"
 repository = "https://github.com/EAimTY/prefix_tree_map"
 
 [dependencies]
+
+[features]
+default = ["std"]
+std = []
